# pyadjoint

./: .gitignore  CODE_OF_CONDUCT.md  ChangeLog.rst  README.md  bitbucket-pipelines.yml  main2.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.py.old
.circleci/: config.yml
.github/workflows/: docs.yml  pypi.yml
docker/: README.md
docker/dev/: Dockerfile  INSTALL  dolfin-adjoint.conf
docker/dev-dolfin-adjoint/: Dockerfile  WELCOME  dolfin-adjoint.conf
docker/dolfin-adjoint/: WELCOME  dolfin-adjoint.conf
docker/fenics/: README.md
docker/firedrake/: README
docker/stable/: Dockerfile  INSTALL  WELCOME  dolfin-adjoint.conf
docs/: Makefile  conf.py  fenics_adjoint.rst  fenics_adjoint.types.rst  index.rst  make.bat  modules.rst  pyadjoint.rst  requirements.txt
docs/source/: conf.py  frontpage.rst  index.rst
dolfin_adjoint/: __init__.py
dolfin_adjoint_common/: compat.py  ufl_constraints.py
dolfin_adjoint_common/blocks/: __init__.py  assembly.py  constant.py  dirichlet_bc.py  expression.py  function.py  function_assigner.py  mesh.py  projection.py  solving.py  variational_solver.py
examples/3Delasiticty-shape/: 3D_bridge.pvsm  linear_elasticity.py
examples/burgers/: burgers.py
examples/dido/: Demo_Dido.py  dido.dot  dido_simple.dot
examples/elasticity-shape/: linear_elasticity.py
examples/heat-equation/: heat-equation.py
examples/heat-shape/: Demo_heat_equation.py  Demo_manual.py  Demo_manual_Dirichlet.py  Demo_pyadjoint.py  manual_shape.py  mesh.geo
examples/klein/: klein.h5  (+3 more)
fenics_adjoint/: __init__.py  assembly.py  boundarymesh.py  compat.py  formmanipulations.py  functional.py  interpolation.py  krylov_solver.py  linear_solver.py  lu_solver.py  lusolver.py  newton_solver.py  petsc_krylov_solver.py  projection.py  refine.py  shapead_transformations.py  solving.py  system_assembly.py  tape.py  ufl_constraints.py  ui.py  variational_solver.py
firedrake_adjoint/: __init__.py  solving.py  ui.py
joss/: paper.md  references.bib
numpy_adjoint/: __init__.py  array.py  utils.py
pyadjoint/: __init__.py  adjfloat.py  block.py  block_output.py  block_variable.py  checkpointing.py  composite_reduced_functional.py  control.py  drivers.py  enlisting.py  ipopt.py  ordered_set.py  overloaded_function.py  overloaded_type.py  placeholder.py  reduced_function.py  reduced_functional.py  reduced_functional_numpy.py  tape.py  ufl_constraints.py  verification.py
pytorch_integration/: __init__.py  reduced_function.py
scripts/: fix_ignored_expression.py
src/: __init__.py  solving.py  tape.py  types.py  ui.py
tests/: conftest.py  disk_checkpointing.py  test_burgers_newton.py  test_enlisting.py  test_expressions.py  test_floats.py  test_hessian.py  test_lcoe.py  test_projection.py  test_reduced_functional.py  test_solving.py  test_tape.py  test_tlm.py
tests_firedrake/: test_burgers_newton.py  test_tlm.py
(+522 files in other folders)
