[metadata]
name = dolfin-adjoint
description=High-level automatic differentiation library,
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dolfin-adjoint/pyadjoint
author= Jørgen S. Dokken,
author_email= dokken@simula.no,
license = LGPL-3.0
license_files = LICENSE

[flake8]
exclude = .git,__pycache__,docs/,examples/,tests/,scripts/
max-line-length = 119
ignore=E731,W503,F405